# Shadertoy

./: Cargo.toml
src/: gpu.rs  input_manager.rs  lib.rs  main.rs  quad.rs  sprite.rs  stoy.rs  test.rs  window.rs
src/shaders/: sprite.wgsl
src/uniforms/: time.rs  uniforms.rs
