[package]
name = "shader_toy"
version = "0.1.0"
edition = "2021"

[dependencies]
bytemuck = {version = "1.19.0", features = ["derive"]}
cgmath = "0.18.0"
pollster = "0.4.0"
rand = "0.8.5"
wgpu = {version = "23.0.0"}
winit = "0.30.5"
instant = "0.1"
anyhow = "1.0.95"
image = "0.25.5"
notify = { version = "8.1.0", features = ["serde"] }


# [lib]
# # crate-type = ["cdylib", "rlib"]
